Fixes path separator bug on windows and adds gradle build step to README

--- a/tpl/includes/Header.temporize.html
+++ b/tpl/includes/Header.temporize.html
@@ -1,1 +1,1 @@
-<div class="header">{$header} {+include includes.Login as login}</div>
+<div class="header">{$header} {include includes.login.Login as $login}</div>
